# sort-google-scholar

./: pyproject.toml
test/: test_sortgs.py
