[tool.poetry]
name = "sortgs"
version = "0.1.0"
description = ""
authors = ["Wittmann"]

[tool.poetry.scripts]
sortgs = "sortgs.sortgs:main"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
selenium = "^4.1.2"

[tool.poetry.dev-dependencies]
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
